Tools clean & purge
